Bug 392418 - Creating or deleting any file within a folder visible to kpeoplevcard crashes the app using kpeople
Summary: Creating or deleting any file within a folder visible to kpeoplevcard crashes...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kpeople
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-27 16:22 UTC by Simon Redman
Modified: 2018-03-27 17:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace from running contactlistqml (4.77 KB, text/plain)
2018-03-27 16:31 UTC, Simon Redman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Redman 2018-03-27 16:22:49 UTC
Overview:
Creating or deleting any file within a folder visible to kpeoplevcard crashes the app using kpeople with Segmentation Fault

Steps to Reproduce:
1. Install kpeople and kpeoplevcard
2. Launch some app which uses kpeople (for example, the demo apps within kpeople)
3. Create or delete any file within the kpeoplevcard folder (Does not have to be a vcard)

Actual Result:
The app using kpeople crashes

Expected Result:
If a new vcard was created or an old one deleted, the app should be able to update its list of contacts. If a different file was created or deleted, nothing should happen.

Build Date and Platform:
25 March 2018 on Fedora 27

KPeople git tag: b2405d9bc4c8af3ae14c768c718d344d470df90a

KPeopleVCard git tag: a170ed35ce84f027ffe9e29e9b75b9b37624602b
Comment 1 Simon Redman 2018-03-27 16:31:21 UTC
Created attachment 111684 [details]
Backtrace from running contactlistqml
Comment 2 Aleix Pol 2018-03-27 17:07:17 UTC
Git commit f181967cde2a3b044b02bf075761231f742ba915 by Aleix Pol.
Committed on 27/03/2018 at 17:06.
Pushed by apol into branch 'master'.

Fix crash when adding contact

Don't report the wrong contact pointer

M  +1    -1    src/kpeoplevcard.cpp

https://commits.kde.org/kpeoplevcard/f181967cde2a3b044b02bf075761231f742ba915