Fix crash when adding contact

Don't report the wrong contact pointer

BUG: 392418